k8s/overlays/prod/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: scw-fe-test
  name: scw-fe-test
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scw-fe-test
  # strategy:
  #   rollingUpdate:
  #     maxSurge: 25%
  #     maxUnavailable: 25%
  #   type: RollingUpdate
  template:
    metadata:
      labels:
        app: scw-fe-test
    spec:
      containers:
        - name: scw-fe-test
          image: ghcr.io/tsvyatkoivanov/scw-fe-test:latest
          # imagePullPolicy: Always
          ports:
            - containerPort: 80
          # resources:
          #   requests:
          #     memory: '128Mi'
          #     cpu: '0.10'
          #   limits:
          #     memory: '256Mi'
          #     cpu: '0.25'
    #imagePullSecrets:
    #- name: dockerconfigjson-github-com
