k8s/overlays/prod/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: scw-fe-test
  name: scw-fe-test
spec:
  selector:
    app: scw-fe-test
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
