k8s/overlays/prod/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: scw-fe-test-ingress
  # annotations:
  #   kubernetes.io/ingress.class: nginx
  #   cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  # tls:
  #   - hosts:
  #       - app.24bba794-f712-4fb6-92a3-649ad4b9a2b3.nodes.k8s.fr-par.scw.cloud
  #     secretName: default-token-5tclp
  rules:
    - host: app.24bba794-f712-4fb6-92a3-649ad4b9a2b3.nodes.k8s.fr-par.scw.cloud
      http:
        paths:
          - path: /staging
            pathType: Prefix
            backend:
              service:
                name: scw-staging-fe-test
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: scw-fe-test
                port:
                  number: 80
